Report update. References are added on LaTeX. Took quite a time :)

--- a/LaTeX/Report1/mesut_ugur_report.tex
+++ b/LaTeX/Report1/mesut_ugur_report.tex
@@ -249,7 +249,9 @@ What goes around comes around, what goes around comes around.\newline
 
 % \bibliographystyle{authoryear-fr}
 \bibliographystyle{ieeetr}
-\bibliography{references}
+% \bibliography{references}
+\bibliography{IMMDref}
+
 
 \clearpage
 
