--- a/LaTeX/Report1/references.bib
+++ b/LaTeX/Report1/references.bib
@@ -1,6 +1,17 @@
 % This file was created with JabRef 2.8.1.
 % Encoding: UTF8
 
+@article{Engelmann2015,
+author = {Engelmann, Georges and Kowal, Maurice and Doncker, Rik W De},
+file = {:C$\backslash$:/Users/ugurm/Desktop/ISIE 2017/capacitor/07104365.pdf:pdf},
+isbn = {9781479967353},
+keywords = {directFET, ceramic capacitor, dual sided cooling,},
+number = {1},
+pages = {290--296},
+title = {{A Highly Integrated Drive Inverter using DirectFETs and Ceramic DC-Link Capacitors for Open-End Winding Machines in Electric Vehicles}},
+year = {2015}
+}
+
 @INPROCEEDINGS{Ampeliotis2008,
   author = {Ampeliotis, D. and Rontogiannis, A.A. and Berberidis, K. and Papaleo,
 	M. and Corazza, G.E.},
