--- a/LaTeX/Report1/06-conclusions.tex
+++ b/LaTeX/Report1/06-conclusions.tex
@@ -3,4 +3,5 @@
 
 In this report, a novel method to eliminate the sixth harmonic component on the DC link created by the passive three-phase diode bridge front-end rectifier, by using third harmonic injection in integrated modular motor drive applications.
 
+As a future work, possible motor winding configurations and possible number of inverter modules which can be applied with this method will be studied. The effects of this third harmonic injection method to the motor operation should also be studied and possible counter-measures should be thought. Comparative study should be achieved in terms of inverter performance such as efficiency.
 
