--- a/LaTeX/Report1/mesut_ugur_report.tex
+++ b/LaTeX/Report1/mesut_ugur_report.tex
@@ -12,6 +12,7 @@
 \graphicspath{{images/}}
 \usepackage{subfig}
 \usepackage{tikz}
+\usepackage{mathtools}
 \usetikzlibrary{shapes,arrows}
 \usepackage{pgfplots}
 \pgfplotsset{compat=newest}
